<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_card_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp">

        <ImageView
            android:id="@+id/iv_vehicle_image"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/vehicle_image"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_brand_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/brand"
            android:textSize="@dimen/font_size_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_seats_title"
            app:layout_constraintStart_toEndOf="@+id/iv_vehicle_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/tv_brand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="@dimen/font_size_value"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/tv_seats"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_brand_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside"
            tools:text="Brand" />

        <TextView
            android:id="@+id/tv_seats_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/seats"
            android:textSize="@dimen/font_size_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_motor_power_title"
            app:layout_constraintStart_toEndOf="@+id/iv_vehicle_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_brand_title"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/tv_seats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="@dimen/font_size_value"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/tv_motor_power"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_seats_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_brand"
            tools:text="5" />

        <TextView
            android:id="@+id/tv_motor_power_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/motor_power"
            android:textSize="@dimen/font_size_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_vehicle_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_seats_title"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/tv_motor_power"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="@dimen/font_size_value"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_motor_power_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_seats"
            tools:text="250" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>